# CMU_15_462

./: .gitignore  LICENSE  README.md
assignments/0.0_Linear_Algebra/: 0.0_Linear_Algebra_solution.md
assignments/0.5_Vector_Calculus/: 0.5_Vector_Calculus_solution.md
assignments/1.0_DrawSVG/: .gitignore  CMakeLists.txt  README.md  writeup.md
assignments/1.0_DrawSVG/src/: CMakeLists.txt  drawsvg.cpp  drawsvg.h  hardware_renderer.h  main.cpp  png.cpp  png.h  software_renderer.cpp  software_renderer.h  svg.cpp  svg.h  svg_renderer.h  texture.cpp  texture.h  triangulation.cpp  triangulation.h  viewport.cpp  viewport.h
assignments/1.0_DrawSVG/src/cmake/modules/: FindCMU462.cmake  FindGLEW.cmake  FindGLFW.cmake
assignments/1.0_DrawSVG/src/hardware/: hardware.cmake  hardware_renderer.cpp
assignments/2.0_3.0_4.0_Scotty3D/: .gitignore  README.md
assignments/2.0_3.0_4.0_Scotty3D/src/: CMakeLists.txt  bbox.cpp  bsdf.cpp  bsdf.h  bvh.cpp  bvh.h  camera.cpp  camera.h  halfEdgeMesh.cpp  halfEdgeMesh.h  meshEdit.cpp  pathtracer.cpp  sampler.cpp  spline.inl
assignments/2.0_3.0_4.0_Scotty3D/src/dynamic_scene/: joint.cpp  mesh.cpp  scene.cpp  scene.h  skeleton.cpp
assignments/2.0_3.0_4.0_Scotty3D/src/static_scene/: aggregate.h  environment_light.cpp  environment_light.h  light.cpp  light.h  scene.h  sphere.cpp  triangle.cpp
notes/: 01_Course_Intro.md  02_Linear_Algebra.md  03_Vector_Calculus.md  04_Drawing_a_Triangle.md  05_Transformations.md  06_3D_Rotation.md  07_Perspective_&_Texture.md  08_Depth_&_Transparency.md  09_Intro_Geometry.md  10_Meshes_&_Manifolds.md  11_Digital_Geometry_Processing.md  12_Geometric_Queries.md  13_Spatial_Data_Structures.md  14_Color.md  15_Radiometry.md  16_The_Rendering_Equation.md  17_Numerical_Integration.md  18_Monte_Carlo_RTX.md  19_Variance_Reduction.md  20_Introduction_to_Animation.md  21_Dynamics_and_Time.md  22_Intoduction_to_Optimization.md  23_PDE.md
